packages/typ/tests/fixtures/diagnostics/0078_core_function_application_mismatch_07.ml.infer.expected
File "0078_core_function_application_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0078_core_function_application_mismatch_07 is not a valid module name.

File "0078_core_function_application_mismatch_07.ml", line 2, characters 20-24:
2 | let _ = consume_eta true
                        ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
